--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,38 +1,179 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
+{% block title %}Tekoma
+{% endblock %}
+{% block stylesheets %}
+	{{ parent() }}
 {% endblock %}
 
+
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
 
-	<div class="example-wrapper">
-		<h1>Hello
-			{{ controller_name }}! ✅</h1>
+	<div class="container accueil">
+		<div class="row mt-4">
+			<div class="col text-center mt-lg-3">
+				<div><img src="/img/imagAccueil.png" alt="image accueil 1"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3">
+				<div>TEKOMA est une sculpture sonorisée nomade à la restitution sonore précise et puissante.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3 title">
+				<div>SPECIFICATIONS</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3">
+				<div><img src="/img/imagAccueil2.png" alt="image accueil 2"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3">
+				<div>Structure en .......... créée par fabrication additive.<br>
+					Composants électroniques et audios choisis pour leur qualité et leur fiabilité.<br>
+					Assemblage manuel et finition personnalisée sur demande (couleur, aspect).<br>
+					Puissance 50W, 2 voies.<br>
+					Réponse en fréquence : 55Hz à 20KHz.<br>
+					Bluetooth 5.0, haute sensibilité de réception. Codecs APTX, APTX HD, APTX-LL, SBC & AAC.<br>
+					Controle d’apairage avec indicateur de connexion.<br>
+					Batteries rechargeables et remplaçables. Autonomie de 10h à puissance moyenne.<br>
+					Alimentation externe 19V/2A fournie permettant  une recharge totale en 2h pendant le fonctionnement.<br>
+					Indicateur de connexion secteur et de pleine charge.</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3 title">
+				<div>CREATIONS</div>
+			</div>
+		</div>
 
-		This friendly message is coming from:
-		<ul>
-			<li>Your controller at
-				<code>
-					<a href="{{ 'C:/Users/jdlon/Documents/TEKOMA/Symfony/Tekoma/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a>
-				</code>
-			</li>
-			<li>Your template at
-				<code>
-					<a href="{{ 'C:/Users/jdlon/Documents/TEKOMA/Symfony/Tekoma/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a>
-				</code>
-			</li>
-		</ul>
+		<div class="row align-items-center justify-content-center">
+			<div class="col-12 col-md-4 text-center mt-3">
+				{% for product in products %}
+					{% if product.highlighted == 1 %}
+						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
+					{% endif %}
+				{% endfor %}
+			</div>
+			<div class="col-12 col-md-4 text-center mt-3">
+				{% for product in products %}
+					{% if product.highlighted == 2 %}
+						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
+					{% endif %}
+				{% endfor %}
+			</div>
+			<div class="col-12 col-md-4 text-center mt-3">
+				{% for product in products %}
+					{% if product.highlighted == 3 %}
+						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
+					{% endif %}
+				{% endfor %}
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col text-center mt-3 title">
+				<div>CONTACT</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col text-center mt-3">
+				<div>contact@tekomasound.com</div>
+			</div>
+		</div>
+
+
+		<form class="needs-validation" novalidate>
+			<div class="row align-items-center justify-content-center">
+				<div
+					class="col-12 col-md-6 mt-3">
+					{# <label for="validationCustom01">Nom</label> #}
+					<input type="text" class="form-control" id="validationCustom01" placeholder="Nom" required>
+					<div class="valid-feedback">
+						C'est parfait !
+					</div>
+					<div class="invalid-feedback">
+						Merci de renseigner votre Nom.
+					</div>
+				</div>
+
+				<div
+					class="col-12 col-md-6 mt-3">
+					{# <label for="validationCustom02">Prénom</label> #}
+					<input type="text" class="form-control" id="validationCustom02" placeholder="Prénom" required>
+					<div class="valid-feedback">
+						C'est parfait !
+					</div>
+					<div class="invalid-feedback">
+						Merci de renseigner votre Prénom.
+					</div>
+				</div>
+				<div
+					class="col-12 col-md-6 mt-3">
+					{# <label for="validationCustom03">Email</label> #}
+					<input type="email" class="form-control" id="validationCustom03" placeholder="Email" required>
+					<div class="valid-feedback">
+						C'est parfait !
+					</div>
+					<div class="invalid-feedback">
+						Merci de renseigner un Email.
+					</div>
+				</div>
+				<div
+					class="col-12 col-md-6 mt-3">
+					{# <label for="validationCustom04">Objet</label> #}
+					<input type="text" class="form-control" id="validationCustom04" placeholder="Objet" required>
+					<div class="valid-feedback">
+						C'est parfait !
+					</div>
+					<div class="invalid-feedback">
+						Merci de renseigner un Objet.
+					</div>
+				</div>
+			</div>
+			<div class="row d-flex justify-content-center">
+				<div class="col-12 col-md-8 col-lg-4 mt-3">
+					<div class="form-group">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required checked>
+							<label class="form-check-label" for="invalidCheck">
+								J'accepte d'être contacté par Tekoma grâce aux informations fournies.
+							</label>
+							<div class="invalid-feedback">
+								Vous devez accepter ces conditions pour envoyer votre message
+							</div>
+						</div>
+					</div>
+				</div>
+				<div
+					class="col-12 mt-3">
+					{# <label for="validationCustom05">Message</label> #}
+					<textarea class="form-control" id="validationCustom05" placeholder="Message" required rows="5"></textarea>
+					<div class="valid-feedback">
+						C'est parfait !
+					</div>
+					<div class="invalid-feedback">
+						Merci de renseigner un message.
+					</div>
+				</div>
+				<div class="col-12 mt-1">
+					<button class="btn btn-custom float-end" type="submit">Envoyer</button>
+				</div>
+			</div>
+		</form>
+
+
+		<div class="row d-flex justify-content-center">
+			<div class="col-3 col-md-2 col-lg-2 mt-3">
+				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+			</div>
+		</div>
 	</div>
+{% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
 {% endblock %}
