--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,28 +50,13 @@
 			</div>
 		</div>
 
-		<div class="row align-items-center justify-content-center">
-			<div class="col-12 col-md-4 text-center mt-3">
-				{% for product in products %}
-					{% if product.highlighted == 1 %}
-						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
-					{% endif %}
-				{% endfor %}
-			</div>
-			<div class="col-12 col-md-4 text-center mt-3">
-				{% for product in products %}
-					{% if product.highlighted == 2 %}
-						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
-					{% endif %}
-				{% endfor %}
-			</div>
-			<div class="col-12 col-md-4 text-center mt-3">
-				{% for product in products %}
-					{% if product.highlighted == 3 %}
-						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
-					{% endif %}
-				{% endfor %}
-			</div>
+		<div class="row align-items-center justify-content-center p-3">
+			{% for product in products %}
+				<div class="col-12 col-md-4 text-center mt-3">
+
+					<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
+				</div>
+			{% endfor %}
 		</div>
 
 		<div class="row">
