--- a/templates/creations/index.html.twig
+++ b/templates/creations/index.html.twig
@@ -13,32 +13,17 @@
 				<div>CREATIONS</div>
 			</div>
 		</div>
-
-		{# <div class="row align-items-center justify-content-center">
-					{% for product in products %}
-						<div class="col-12 col-md-4 d-md-inline-flex justify-content-md-center text-center mt-3">
-		
-							<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
-		
-						</div>
-					{% endfor %}
-				</div> #}
-		{# 
-				<div class="row">
-					<div class="col text-center mt-3 title d-md-none">
-						<div>CREATIONS</div>
-					</div>
-				</div> #}
-
-
 		<div class="row align-items-center justify-content-center">
 			{% for product in products %}
 				<div class="col-12 col-md-4 text-center mt-3">
-
 					<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
-
 				</div>
 			{% endfor %}
+		</div>
+		<div class="row d-flex justify-content-center">
+			<div class="col-3 col-md-2 col-lg-2 mt-3">
+				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+			</div>
 		</div>
 	{% endblock %}
 
