--- a/templates/creations/index.html.twig
+++ b/templates/creations/index.html.twig
@@ -20,13 +20,14 @@
 				</div>
 			{% endfor %}
 		</div>
-		<div class="row d-flex justify-content-center">
+		<div class="row d-flex justify-content-center logoSpec">
 			<div class="col-3 col-md-2 col-lg-2 mt-3">
 				<img class="card-img" src="./img/JUL.png" alt="sign logo">
 			</div>
 		</div>
-	{% endblock %}
+	</div>
+{% endblock %}
 
-	{% block javascripts %}
-		{{ parent() }}
-	{% endblock %}
+{% block javascripts %}
+	{{ parent() }}
+{% endblock %}
