--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -123,7 +123,7 @@
 				<div class="col-12 col-md-8 col-lg-4 mt-3">
 					<div class="form-group">
 						<div class="form-check">
-							<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required checked>
+							<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required unchecked>
 							<label class="form-check-label" for="invalidCheck">
 								J'accepte d'être contacté par Tekoma grâce aux informations fournies.
 							</label>
