--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="fixed-top">
 	<div class="container-fluid">
-		<div class="row d-flex align-items-center justify-content-between coverBlack">
+		<div class="row d-flex align-items-center justify-content-between navBlack">
 			<div class="col-2 mt-1">
 				<a href="javascript:void(0);" onclick="burgerToggle()">
 					<img id="burger" class="card-img  d-md-none" src="/img/burger.png" alt="logo">
@@ -29,11 +29,13 @@
 				<a href="{{path('contact')}}" class="{{ app.request.get('_route') == 'contact' ? 'active' }}">Contact</a>
 			</div>
 			<div class="col-12 my-2">
-				<a href="#">insta</a>
+				<a href="#">
+					<i class="fab fa-instagram"></i>
+				</a>
 			</div>
 		</div>
 		{# medium  #}
-		<div class="row d-none d-md-flex justify-content-between navbar coverBlack">
+		<div class="row d-none d-md-flex justify-content-between navbar navBlack">
 			<div class="col-2 my-3">
 				<div class="text-center">
 					<a class="title {{ app.request.get('_route') == 'home' ? 'active' }}" href="{{ path('home')}}">ACCUEIL</a>
@@ -56,7 +58,9 @@
 			</div>
 			<div class="col-2 my-3">
 				<div class="text-center">
-					<a class="title" href="#">insta</a>
+					<a class="title" href="#">
+						<i class="fab fa-instagram"></i>
+					</a>
 				</div>
 			</div>
 		</div>
