--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,15 @@ body {
     color:#ffffff!important; 
  } 
 
+ .form-arround {
+  background-color:rgba(0,0,0,0) !important;
+  border: 1px solid #505050!important;
+ }
+
+ .form-check-label {
+   color: #6c757d;
+ }
+
 .form-error-icon  {
 color: RED;
 }
