--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,8 +9,10 @@
 
 {% block body %}
 
+
 	<div class="container accueil">
 		<div class="row mt-4">
+			{% include "_partials/_flashbag.html.twig" %}
 			<div class="col text-center mt-lg-3">
 				<div><img src="/img/imagAccueil.png" alt="image accueil 1"></div>
 			</div>
@@ -64,92 +66,64 @@
 				<div>CONTACT</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col text-center mt-3">
-				<div>contact@tekomasound.com</div>
-			</div>
-		</div>
 
 
-		<form class="needs-validation" novalidate>
-			<div class="row align-items-center justify-content-center">
-				<div
-					class="col-12 col-md-6 mt-3">
-					{# <label for="validationCustom01">Nom</label> #}
-					<input type="text" class="form-control" id="validationCustom01" placeholder="Nom" required>
-					<div class="valid-feedback">
-						C'est parfait !
-					</div>
-					<div class="invalid-feedback">
-						Merci de renseigner votre Nom.
-					</div>
-				</div>
+		<div class="row justify-content-center">
+			<div class="col-md-8 mt-md-5">
+				<div id="prospectForm">
+					{{ form_start(form) }}
+					{{ form_errors(form) }}
+					<div class="row align-items-center justify-content-center mx-2">
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.firstname) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.firstname) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.lastname) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.lastname) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.firstname) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.lastname) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.prospectEmail) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.prospectEmail) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.subject) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.subject) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.prospectEmail) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.subject) }}</div>
+						</div>
+						<div class="row d-flex justify-content-center">
+							<div class="col-12 col-md-8 col-lg-4 mt-3">
+								<div class="text-md-center">{{ form_widget(form.agreeTerms) }}</div>
+								<div class="text-center">{{ form_errors(form.agreeTerms) }}</div>
 
-				<div
-					class="col-12 col-md-6 mt-3">
-					{# <label for="validationCustom02">Prénom</label> #}
-					<input type="text" class="form-control" id="validationCustom02" placeholder="Prénom" required>
-					<div class="valid-feedback">
-						C'est parfait !
-					</div>
-					<div class="invalid-feedback">
-						Merci de renseigner votre Prénom.
-					</div>
-				</div>
-				<div
-					class="col-12 col-md-6 mt-3">
-					{# <label for="validationCustom03">Email</label> #}
-					<input type="email" class="form-control" id="validationCustom03" placeholder="Email" required>
-					<div class="valid-feedback">
-						C'est parfait !
-					</div>
-					<div class="invalid-feedback">
-						Merci de renseigner un Email.
-					</div>
-				</div>
-				<div
-					class="col-12 col-md-6 mt-3">
-					{# <label for="validationCustom04">Objet</label> #}
-					<input type="text" class="form-control" id="validationCustom04" placeholder="Objet" required>
-					<div class="valid-feedback">
-						C'est parfait !
-					</div>
-					<div class="invalid-feedback">
-						Merci de renseigner un Objet.
-					</div>
-				</div>
-			</div>
-			<div class="row d-flex justify-content-center">
-				<div class="col-12 col-md-8 col-lg-4 mt-3">
-					<div class="form-group">
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required unchecked>
-							<label class="form-check-label" for="invalidCheck">
-								J'accepte d'être contacté par Tekoma grâce aux informations fournies.
-							</label>
-							<div class="invalid-feedback">
-								Vous devez accepter ces conditions pour envoyer votre message
 							</div>
 						</div>
+						<div class="col-12 mt-3">
+							{{ form_widget(form.message) }}
+							{{ form_errors(form.message) }}
+						</div>
+						<div class="col-12 mt-1 form-group">
+							<button class="btn btn-custom float-end" type="submit">Envoyer</button>
+						</div>
 					</div>
+					{# {{ form_end(form, {'render_rest': false}) }} #}
+					{{ form_end(form) }}
 				</div>
-				<div
-					class="col-12 mt-3">
-					{# <label for="validationCustom05">Message</label> #}
-					<textarea class="form-control" id="validationCustom05" placeholder="Message" required rows="5"></textarea>
-					<div class="valid-feedback">
-						C'est parfait !
-					</div>
-					<div class="invalid-feedback">
-						Merci de renseigner un message.
-					</div>
-				</div>
-				<div class="col-12 mt-1">
-					<button class="btn btn-custom float-end" type="submit">Envoyer</button>
-				</div>
-			</div>
-		</form>
 
+
+			</div>
+		</div>
 
 		<div class="row d-flex justify-content-center">
 			<div class="col-3 col-md-2 col-lg-2 mt-3">
