--- a/templates/_partials/_flashbag.html.twig
+++ b/templates/_partials/_flashbag.html.twig
@@ -1,16 +1,15 @@
 {% for label, messages in app.flashes %}
-	<section class="container">
-		<div class="alert alert-{{ label }} alert-dismissible text-center fade show my-4" role="alert">
-			{% for message in messages %}
-				<p class="font-weight-bold">{{ message|raw }}
+	<div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+		<div class="text-center">
+			<strong>
+				{% for message in messages %}
+					{{ message|raw }}
 					{% if label is same as("succes") %}&#x1F44D;
-						{% elseif label is same as("danger") %}&#x1F6A7;%}
+						{% elseif label is same as("danger") %}&#x1F6A7;
 					{% endif %}
-				</p>
-			{% endfor %}
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			</button>
+				{% endfor %}
+			</strong>
 		</div>
-	</section>
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
 {% endfor %}
