--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,5 +1,6 @@
 <nav class="fixed-top">
 	<div class="container-fluid">
+
 		<div class="row d-flex align-items-center justify-content-between navBlack">
 			<div class="col-2 mt-1">
 				<a href="javascript:void(0);" onclick="burgerToggle()">
@@ -10,9 +11,21 @@
 				<a href="{{ path('home')}}">
 					<img class="card-img" src="/img/TEKOMA.png" alt="logo"></a>
 			</div>
-			<div class="col-2 mt-1">
-				<img class="card-img" src="" alt="logo">
-			</div>
+
+
+			{% if app.user %}
+				<div class="col-2 mt-1 text-center">
+					<a href="{{ path('logout')}}" class="{{ app.request.get('_route') == 'login' ? 'active' }}">Déconnexion
+					</a>
+				</div>
+			{% else %}
+				<div class="col-2 mt-1 text-center">
+					<a href="{{ path('login')}}" class="{{ app.request.get('_route') == 'login' ? 'active' }}">Connexion
+					</a>
+				</div>
+			{% endif %}
+
+
 		</div>
 		{# small  #}
 		<div id="myTopnav" class="row coverBlack d-none d-md-none mx-1">
@@ -28,11 +41,19 @@
 			<div class="col-12 mt-2">
 				<a href="{{path('contact')}}" class="{{ app.request.get('_route') == 'contact' ? 'active' }}">Contact</a>
 			</div>
-			<div class="col-12 my-2">
-				<a href="#">
-					<i class="fab fa-instagram"></i>
-				</a>
-			</div>
+
+			{% if is_granted('ROLE_ADMIN') %}
+				<div class="col-12 my-2">
+					<a href="{{path('admin')}}" class="{{ app.request.get('_route') == 'admin' ? 'active' }} text-warning">ADMIN</a>
+				</div>
+			{% else %}
+				<div class="col-12 my-2">
+					<a href="#">
+						<i class="fab fa-instagram"></i>
+					</a>
+				</div>
+			{% endif %}
+
 		</div>
 		{# medium  #}
 		<div class="row d-none d-md-flex justify-content-between navbar navBlack">
@@ -57,12 +78,19 @@
 				</div>
 			</div>
 			<div class="col-2 my-3">
+				{% if is_granted('ROLE_ADMIN') %}
+					<div class="text-center">
+						<a class="text-warning title {{ app.request.get('_route') == 'admin' ? 'active' }}" href="{{ path('admin')}}">ADMIN</a>
+					</div>
+				</div>
+			{% else %}
 				<div class="text-center">
 					<a class="title" href="#">
 						<i class="fab fa-instagram"></i>
 					</a>
 				</div>
-			</div>
+			{% endif %}
 		</div>
+
 	</div>
-</nav>
+</div></nav>
