--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -35,9 +35,11 @@
 			<div class="col-12 mt-2">
 				<a href="{{ path('specifications')}}" class="{{ app.request.get('_route') == 'specifications' ? 'active' }}">Spécifications</a>
 			</div>
+
 			<div class="col-12 mt-2">
-				<a href="{{ path('creations')}}" class="{{ app.request.get('_route') == 'creations' ? 'active' }}">Créations</a>
+				<a href="{{ path('creations')}}" class="{{ app.request.get('_route') matches '/creations/' ? 'active' }}">Créations</a>
 			</div>
+
 			<div class="col-12 mt-2">
 				<a href="{{path('contact')}}" class="{{ app.request.get('_route') == 'contact' ? 'active' }}">Contact</a>
 			</div>
@@ -69,7 +71,7 @@
 			</div>
 			<div class="col-2 my-3">
 				<div class="text-center">
-					<a class="title {{ app.request.get('_route') == 'creations' ? 'active' }}" href="{{ path('creations')}}">CREATIONS</a>
+					<a class="title {{ app.request.get('_route') matches '/creations/' ? 'active' }}" href="{{ path('creations')}}">CREATIONS</a>
 				</div>
 			</div>
 			<div class="col-2 my-3">
