--- a/templates/creations/show.html.twig
+++ b/templates/creations/show.html.twig
@@ -49,6 +49,12 @@
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="col text-center mt-3">
+				<button class="btn btn-custom-border" onclick="window.location.href = '{{ path('contact_order' , {'slug':product.slug} )}}';">Commander</button>
+			</div>
+		</div>
+
 		<div class="row d-flex justify-content-center logoSpec">
 			<div class="col-3 col-md-2 col-lg-2 mt-3">
 				<img class="card-img" src="/img/JUL.png" alt="sign logo">
