--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,6 +111,25 @@ a {
 border: 1px solid #505050;
 }
 
+.card-header, .card {
+  color:#505050;
+  background-color:rgba(0, 0, 0, 0.657);
+}
+
+.borderCard {
+  border:1px solid #505050;
+}
+
+.borderCard, .cardAnim {  
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+
+cursor: pointer;
+}
+
+.borderCard:hover , .cardAnim:hover{
+   transform: scale(1.05);
+}
+
 /* form-control {
   border: none;
   border-top: 1px solid #505050;
