--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,88 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!
+{% block title %}Tekoma
+{% endblock %}
+{% block stylesheets %}
+	{{ parent() }}
 {% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+	<div class="container accueil">
+		<div class="row">
+			<div class="col text-center mt-3 title d-md-none">
+				<div>CREATIONS</div>
+			</div>
+		</div>
+		<div class="row align-items-center justify-content-center px-3 mt-5">
+			{% for product in products %}
+				<div class="col-12 col-md-3 text-center m-3 borderCard cardAnim">
+					<a href="{{ path('admin_show' , {'slug':product.slug|e} ) }}">
+						<div class="card mb-3">
+							<h3 class="card-header">{{ product.name|e }}</h3>
+							<div class="card-body">
+								{% if product.isActive|e %}
+									<h5 class="card-title text-success">Actif</h5>
+								{% else %}
+									<h5 class="card-title text-danger">Inactif</h5>
+								{% endif %}
+								<h6 class="card-subtitle text-muted pt-3">{{ product.price|e }}€</h6>
+							</div>
+							<img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}">
+							<div class="card-body">
+								<p class="card-text">
+									{% if product.description|e|length > 50 %}
+										{{ product.description|e|striptags|slice(0, 50) ~ '...' }}
+									{% else %}
+										{{ product.description|e }}
+									{% endif %}
+
+
+								</p>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item {{ product.quantity|e > 0  ? 'bg-secondary' : 'bg-transparent border border-danger' }} ">
+									<b>Quantité disponible :
+										{{ product.quantity|e }}</b>
+								</li>
+								{% if product.highlighted|e %}
+									<li class="list-group-item bg-success">
+										<b>Produit mis en avant sur la page d'accueil (
+											{{ product.highlighted|e }}
+											)</b>
+									</li>
+									{% else %}
+								{% endif %}
+							</ul>
+							<div class="card-body">
+								<a href="#" class="card-link">Card link</a>
+								<a href="#" class="card-link">Another link</a>
+							</div>
+							<div class="card-footer text-muted">
+								2 days ago
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-body">
+								<h4 class="card-title">Card title</h4>
+								<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="card-link">Card link</a>
+								<a href="#" class="card-link">Another link</a>
+							</div>
+						</div>
+						{# <div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div> #}
+					</a>
+				</div>
+			{% endfor %}
+		</div>
+		<div class="row d-flex justify-content-center logoSpec">
+			<div class="col-3 col-md-2 col-lg-2 mt-3">
+				<img class="card-img" src="./img/JUL.png" alt="sign logo">
+			</div>
+		</div>
+	</div>
+{% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
+{% endblock %}
