--- a/templates/creations/index.html.twig
+++ b/templates/creations/index.html.twig
@@ -13,9 +13,9 @@
 				<div>CREATIONS</div>
 			</div>
 		</div>
-		<div class="row align-items-center justify-content-center">
+		<div class="row align-items-center justify-content-center mt-1">
 			{% for product in products %}
-				<div class="col-12 col-md-4 text-center mt-3">
+				<div class="col-12 col-md-4 text-center mt-3 cardAnim">
 					<a href="{{ path('creations_show' , {'slug':product.slug|e} ) }}">
 						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
 					</a>
