--- a/templates/admin/delete.html.twig
+++ b/templates/admin/delete.html.twig
@@ -46,7 +46,7 @@
 
 		<div class="row">
 			<div class="col text-center mt-3">
-				<button class="btn btn-custom text-danger" onclick="window.location.href = '{{ path('admin_delete' , {'slug':product.slug} )}}';">Supprimer</button>
+				<button class="btn btn-custom" onclick="window.location.href = '{{ path('creations')}}';">Revenir aux créations</button>
 			</div>
 		</div>
 
