--- a/templates/contact/order.html.twig
+++ b/templates/contact/order.html.twig
@@ -30,7 +30,7 @@
 		<div class="row align-items-center justify-content-center">
 
 			<div class="col-12 col-md-4 text-center mt-3">
-				<div class="imgProduct p-4"><img class="card-img" style="width: 10vh;" src="/img/{{ product.img }}" alt="image {{ product.name }}"></div>
+				<div class="imgProduct p-4"><img class="card-img" style="width: 10vh;" src="/img/uploads/{{ product.img }}" alt="image {{ product.name }}"></div>
 			</div>
 
 		</div>
