--- a/templates/creations/index.html.twig
+++ b/templates/creations/index.html.twig
@@ -17,7 +17,7 @@
 			{% for product in products %}
 				<div class="col-12 col-md-4 text-center mt-3 cardAnim">
 					<a href="{{ path('creations_show' , {'slug':product.slug|e} ) }}">
-						<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
+						<div class="imgProduct p-4"><img class="card-img" src="/img/uploads/{{ product.img|e }}" alt="image {{ product.name|e }}"></div>
 					</a>
 				</div>
 			{% endfor %}
