--- a/templates/creations/show.html.twig
+++ b/templates/creations/show.html.twig
@@ -16,7 +16,7 @@
 		<div class="row align-items-center justify-content-center">
 
 			<div class="col-12 col-md-4 text-center mt-3">
-				<div class="imgProduct p-4"><img class="card-img" src="/img/{{ product.img }}" alt="image {{ product.name }}"></div>
+				<div class="imgProduct p-4"><img class="card-img" src="/img/uploads/{{ product.img }}" alt="image {{ product.name }}"></div>
 			</div>
 
 		</div>
