--- a/templates/_partials/_flashbag.html.twig
+++ b/templates/_partials/_flashbag.html.twig
@@ -1,5 +1,5 @@
 {% for label, messages in app.flashes %}
-	<div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+	<div class="alert alert-{{ label }} alert-dismissible fade show" role="alert" id="alert-{{ label }}">
 		<div class="text-center">
 			<strong>
 				{% for message in messages %}
