--- a/templates/admin/new.html.twig
+++ b/templates/admin/new.html.twig
@@ -14,105 +14,87 @@
 			</div>
 		</div>
 
-		<div class="row">
 
+		{# TEST FORM #}
+		<div class="row justify-content-center">
+			<div class="col-md-8 mt-md-5">
+				<div id="add_creationForm">
+					{{ form_start(form) }}
+					{{ form_errors(form) }}
+					<div class="row align-items-center justify-content-center mx-2">
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.name) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.name) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.price) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.price) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.name) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.price) }}</div>
+						</div>
+						<div class="col-12 mt-3">
+							{{ form_widget(form.description) }}
+							{{ form_errors(form.description) }}
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.quantity) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.quantity) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3 custom-form">
+							<div>{{ form_widget(form.img) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.img) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.quantity) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.img) }}</div>
+						</div>
 
-			<div class="row align-items-center justify-content-center">
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.highlighted) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.highlighted) }}</div>
+						</div>
+						<div class="col-12 col-md-6 mt-3">
+							<div>{{ form_widget(form.slug) }}</div>
+							<div class="d-block d-md-none">{{ form_errors(form.slug) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.highlighted) }}</div>
+						</div>
+						<div class="col-12 col-md-6">
+							<div class="d-none d-md-block">{{ form_errors(form.slug) }}</div>
+						</div>
 
-				<div
-					class="col-12 col-md-4 text-center mt-3">{# <div class="imgProduct p-4"><img class="card-img" style="width: 10vh;" src="/img/{{ product.img }}" alt="image {{ product.name }}"></div> #}
-				</div>
-
-			</div>
-
-			<div class="row">
-				<div
-					class="col text-center mt-3">{# <div>{{ product.price }}
-																																																																																																																																																																																																																																																																			€
-																																																																																																																																																																																																																																																																		</div> #}
-				</div>
-			</div>
-
-			{# TEST FORM #}
-			<div class="row justify-content-center">
-				<div class="col-md-8 mt-md-5">
-					<div id="add_creationForm">
-						{{ form_start(form) }}
-						{{ form_errors(form) }}
-						<div class="row align-items-center justify-content-center mx-2">
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.name) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.name) }}</div>
-							</div>
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.price) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.price) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.name) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.price) }}</div>
-							</div>
-							<div class="col-12 mt-3">
-								{{ form_widget(form.description) }}
-								{{ form_errors(form.description) }}
-							</div>
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.quantity) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.quantity) }}</div>
-							</div>
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.slug) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.slug) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.quantity) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.slug) }}</div>
-							</div>
-
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.highlighted) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.highlighted) }}</div>
-							</div>
-							<div class="col-12 col-md-6 mt-3">
-								<div>{{ form_widget(form.img) }}</div>
-								<div class="d-block d-md-none">{{ form_errors(form.img) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.highlighted) }}</div>
-							</div>
-							<div class="col-12 col-md-6">
-								<div class="d-none d-md-block">{{ form_errors(form.img) }}</div>
-							</div>
-
-							<div class="row d-flex justify-content-center">
-								<div class="col-12 col-md-8 col-lg-4 mt-3">
-									<div class="text-md-center">{{ form_widget(form.isActive) }}</div>
-									<div class="text-center">{{ form_errors(form.isActive) }}</div>
-								</div>
-							</div>
-
-							<div class="col-12 mt-1 form-group">
-								<button class="btn btn-custom float-end" type="submit">Créer</button>
+						<div class="row d-flex justify-content-center">
+							<div class="col-12 col-md-8 col-lg-4 mt-3">
+								<div class="text-md-center">{{ form_widget(form.isActive) }}</div>
+								<div class="text-center">{{ form_errors(form.isActive) }}</div>
 							</div>
 						</div>
-						{{ form_rest(form) }}
-						{{ form_end(form) }}
-					</div>
-				</div>
-				<div class="row d-flex justify-content-center logoSpec">
-					<div class="col-3 col-md-2 col-lg-2 mt-3">
-						<img class="card-img" src="/img/JUL.png" alt="sign logo">
-					</div>
-				</div>
 
+						<div class="col-12 mt-1 form-group">
+							<button class="btn btn-custom float-end" type="submit">Créer</button>
+						</div>
+					</div>
+					{{ form_rest(form) }}
+					{{ form_end(form) }}
+				</div>
 			</div>
-		</div>
-	{% endblock %}
-	{% block javascripts %}
-		{{ parent() }}
+			<div class="row d-flex justify-content-center logoSpec">
+				<div class="col-3 col-md-2 col-lg-2 mt-3">
+					<img class="card-img" src="/img/JUL.png" alt="sign logo">
+				</div>
+			</div>
 
-	{% endblock %}
+		</div>
+	</div>
+{% endblock %}
+{% block javascripts %}
+	{{ parent() }}
+
+{% endblock %}
