--- a/templates/emails/template.html.twig
+++ b/templates/emails/template.html.twig
@@ -747,10 +747,10 @@ END OF IMPORTANT
 		<div
 			class="es-wrapper-color">
 			<!--[if gte mso 9]>
-																																																																																																																																	<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-																																																																																																																																		<v:fill type="tile" color="#eeeeee"></v:fill>
-																																																																																																																																	</v:background>
-																																																																																																																																<![endif]-->
+																																																																																																																																							<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
+																																																																																																																																								<v:fill type="tile" color="#eeeeee"></v:fill>
+																																																																																																																																							</v:background>
+																																																																																																																																						<![endif]-->
 			<table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0">
 				<tbody>
 					<tr>
@@ -979,7 +979,7 @@ END OF IMPORTANT
 																									<tr class="links-images-top">
 																										<td class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; " width="25.00%" bgcolor="transparent" align="center">
 																											<a target="_blank" style="color: #ffffff; font-size: 20px;" href>
-																												<img src="{{ email.image('@images/instagram.svg') }}" height="50px" alt="Logo Tekoma"></td>
+																												<img src="{{ email.image('@images/instagram.svg') }}" height="50px" alt="Logo instagram"></td>
 																										</td>
 																									</tr>
 																								</tbody>
@@ -1003,85 +1003,85 @@ END OF IMPORTANT
 
 
 							{# <table cellpadding="0" cellspacing="0" class="es-footer" align="center">
-																																																																					<tbody>
-																																																																						<tr>
-																																																																							<td class="esd-stripe" esd-custom-block-id="7684" align="center">
-																																																																								<table class="es-footer-body" width="600" cellspacing="0" cellpadding="0" align="center">
-																																																																									<tbody>
-																																																																										<tr>
-																																																																											<td class="esd-structure es-p35t es-p40b es-p35r es-p35l" align="left">
-																																																																												<table width="100%" cellspacing="0" cellpadding="0">
-																																																																													<tbody>
-																																																																														<tr>
-																																																																															<td class="esd-container-frame" width="530" valign="top" align="center">
-																																																																																<table width="100%" cellspacing="0" cellpadding="0">
-																																																																																	<tbody>
-																																																																																		<tr>
-																																																																																			<td class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; " width="25.00%" bgcolor="#363636" align="center">
-																																																																																				<a target="_blank"><img src="{{ email.image('@images/JUL.png') }}" alt="jul logo" style="display: block;" title="jul logo" width="120"></a>
-																																																																																			</td>
-																																																																																		</tr>
-																																																																																		<tr>
-																																																																																			<td class="esd-block-text es-p35b" align="center">
-																																																																																				<p>&nbsp;
-																																																																																				</p>
-																																																																																				<p>
-																																																																																					<strong>Tekoma, Lyon</strong>
-																																																																																				</p>
-																																																																																			</td>
-																																																																																		</tr>
-																																																																																		<tr>
-																																																																																			<td esdev-links-color="#777777" align="left" class="esd-block-text es-m-txt-c es-p5b">
-																																																																																				<p style="color: #777777;">&nbsp;</p>
-																																																																																			</td>
-																																																																																		</tr>
-																																																																																	</tbody>
-																																																																																</table>
-																																																																															</td>
-																																																																														</tr>
-																																																																													</tbody>
-																																																																												</table>
-																																																																											</td>
-																																																																										</tr>
-																																																																									</tbody>
-																																																																								</table>
-																																																																							</td>
-																																																																						</tr>
-																																																																					</tbody>
-																																																																				</table>
-																																																																				<table class="esd-footer-popover es-content" cellspacing="0" cellpadding="0" align="center">
-																																																																					<tbody>
-																																																																						<tr>
-																																																																							<td class="esd-stripe" align="center">
-																																																																								<table class="es-content-body" style="background-color: transparent;" width="600" cellspacing="0" cellpadding="0" align="center">
-																																																																									<tbody>
-																																																																										<tr>
-																																																																											<td class="esd-structure es-p30t es-p30b es-p20r es-p20l" align="left">
-																																																																												<table width="100%" cellspacing="0" cellpadding="0">
-																																																																													<tbody>
-																																																																														<tr>
-																																																																															<td class="esd-container-frame" width="560" valign="top" align="center">
-																																																																																<table width="100%" cellspacing="0" cellpadding="0">
-																																																																																	<tbody>
-																																																																																		<tr>
-																																																																																			<td class="esd-block-image es-infoblock made_with" align="center" style="font-size:0">
-																																																																																				<a></a>
-																																																																																			</td>
-																																																																																		</tr>
-																																																																																	</tbody>
-																																																																																</table>
-																																																																															</td>
-																																																																														</tr>
-																																																																													</tbody>
-																																																																												</table>
-																																																																											</td>
-																																																																										</tr>
-																																																																									</tbody>
-																																																																								</table>
-																																																																							</td>
-																																																																						</tr>
-																																																																					</tbody>
-																																																																				</table> #}
+																																																																																			<tbody>
+																																																																																				<tr>
+																																																																																					<td class="esd-stripe" esd-custom-block-id="7684" align="center">
+																																																																																						<table class="es-footer-body" width="600" cellspacing="0" cellpadding="0" align="center">
+																																																																																							<tbody>
+																																																																																								<tr>
+																																																																																									<td class="esd-structure es-p35t es-p40b es-p35r es-p35l" align="left">
+																																																																																										<table width="100%" cellspacing="0" cellpadding="0">
+																																																																																											<tbody>
+																																																																																												<tr>
+																																																																																													<td class="esd-container-frame" width="530" valign="top" align="center">
+																																																																																														<table width="100%" cellspacing="0" cellpadding="0">
+																																																																																															<tbody>
+																																																																																																<tr>
+																																																																																																	<td class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; " width="25.00%" bgcolor="#363636" align="center">
+																																																																																																		<a target="_blank"><img src="{{ email.image('@images/JUL.png') }}" alt="jul logo" style="display: block;" title="jul logo" width="120"></a>
+																																																																																																	</td>
+																																																																																																</tr>
+																																																																																																<tr>
+																																																																																																	<td class="esd-block-text es-p35b" align="center">
+																																																																																																		<p>&nbsp;
+																																																																																																		</p>
+																																																																																																		<p>
+																																																																																																			<strong>Tekoma, Lyon</strong>
+																																																																																																		</p>
+																																																																																																	</td>
+																																																																																																</tr>
+																																																																																																<tr>
+																																																																																																	<td esdev-links-color="#777777" align="left" class="esd-block-text es-m-txt-c es-p5b">
+																																																																																																		<p style="color: #777777;">&nbsp;</p>
+																																																																																																	</td>
+																																																																																																</tr>
+																																																																																															</tbody>
+																																																																																														</table>
+																																																																																													</td>
+																																																																																												</tr>
+																																																																																											</tbody>
+																																																																																										</table>
+																																																																																									</td>
+																																																																																								</tr>
+																																																																																							</tbody>
+																																																																																						</table>
+																																																																																					</td>
+																																																																																				</tr>
+																																																																																			</tbody>
+																																																																																		</table>
+																																																																																		<table class="esd-footer-popover es-content" cellspacing="0" cellpadding="0" align="center">
+																																																																																			<tbody>
+																																																																																				<tr>
+																																																																																					<td class="esd-stripe" align="center">
+																																																																																						<table class="es-content-body" style="background-color: transparent;" width="600" cellspacing="0" cellpadding="0" align="center">
+																																																																																							<tbody>
+																																																																																								<tr>
+																																																																																									<td class="esd-structure es-p30t es-p30b es-p20r es-p20l" align="left">
+																																																																																										<table width="100%" cellspacing="0" cellpadding="0">
+																																																																																											<tbody>
+																																																																																												<tr>
+																																																																																													<td class="esd-container-frame" width="560" valign="top" align="center">
+																																																																																														<table width="100%" cellspacing="0" cellpadding="0">
+																																																																																															<tbody>
+																																																																																																<tr>
+																																																																																																	<td class="esd-block-image es-infoblock made_with" align="center" style="font-size:0">
+																																																																																																		<a></a>
+																																																																																																	</td>
+																																																																																																</tr>
+																																																																																															</tbody>
+																																																																																														</table>
+																																																																																													</td>
+																																																																																												</tr>
+																																																																																											</tbody>
+																																																																																										</table>
+																																																																																									</td>
+																																																																																								</tr>
+																																																																																							</tbody>
+																																																																																						</table>
+																																																																																					</td>
+																																																																																				</tr>
+																																																																																			</tbody>
+																																																																																		</table> #}
 						</td>
 					</tr>
 				</tbody>
