--- a/templates/admin/delete.html.twig
+++ b/templates/admin/delete.html.twig
@@ -8,8 +8,8 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
-			<div class="col text-center mt-3 title bg-danger mx-3">
+		<div class="row justify-content-center p-3">
+			<div class="col-md-6 text-center m-3 title bg-danger mx-3 rounded">
 				<div>Suppression
 					{{ product.name }}</div>
 			</div>
