--- a/templates/admin/update.html.twig
+++ b/templates/admin/update.html.twig
@@ -8,15 +8,22 @@
 {% block body %}
 	<div class="container accueil">
 		<div class="row">
-			{% include "_partials/_flashbag.html.twig" %}
-			<div class="col text-center mt-3 title">
+			<div class="col-12 text-center mt-3 title">
 				<div>Modification de
 					{{product.name}}</div>
 			</div>
 		</div>
 
+		<div class="row align-items-center justify-content-center mx-2">
 
-		{# TEST FORM #}
+			<div class="col-12 col-md-4 text-center mt-3">
+				<div class="imgProduct p-4"><img class="card-img" style="width: 10vh;" src="/img/uploads/{{ product.img }}" alt="image {{ product.name }}"></div>
+			</div>
+
+		</div>
+
+
+		{# FORM #}
 		<div class="row justify-content-center">
 			<div class="col-md-8 mt-md-5">
 				<div id="add_creationForm">
@@ -70,13 +77,6 @@
 						<div class="col-12 col-md-6">
 							<div class="d-none d-md-block">{{ form_errors(form.slug) }}</div>
 						</div>
-
-						{# <div class="row d-flex justify-content-center">
-																																					<div class="col-12 col-md-8 col-lg-4 mt-3">
-																																						<div class="text-md-center">{{ form_widget(form.isActive) }}</div>
-																																						<div class="text-center">{{ form_errors(form.isActive) }}</div>
-																																					</div>
-																																				</div> #}
 
 						<div class="col-12 mt-1 form-group">
 							<button class="btn btn-custom float-end" type="submit">Modifier</button>
