--- a/templates/creations/show.html.twig
+++ b/templates/creations/show.html.twig
@@ -8,8 +8,8 @@
 
 {% block body %}
 	<div class="container accueil">
-		<div class="row">
-			<div class="col text-center mt-3 title">
+		<div class="row justify-content-center">
+			<div class="col-12 text-center mt-3 title">
 				<div>{{ product.name }}</div>
 			</div>
 		</div>
@@ -21,36 +21,36 @@
 
 		</div>
 
-		<div class="row">
-			<div class="col text-center mt-3 title">
+		<div class="row justify-content-center">
+			<div class="col-12 text-center mt-3 title">
 				<div>Description
 					{{ product.name }}</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col text-center mt-3">
+		<div class="row justify-content-center">
+			<div class="col-md-10 text-center mt-3">
 				<div>{{ product.description }}
 				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col text-center mt-3">
+		<div class="row justify-content-center">
+			<div class="col-12 text-center mt-3">
 				<div>{{ product.price }}
 					€
 				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col text-center mt-3">
+		<div class="row justify-content-center">
+			<div class="col-12 text-center mt-3">
 				<button class="btn btn-custom" onclick="window.location.href = '{{ path('creations')}}';">Revenir aux créations</button>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col text-center mt-3">
+		<div class="row justify-content-center">
+			<div class="col-12 text-center mt-3">
 				<button class="btn btn-custom-border" onclick="window.location.href = '{{ path('contact_order' , {'slug':product.slug} )}}';">Commander</button>
 			</div>
 		</div>
