custom.js_admin_update.html.twig_new.html.twig

--- a/templates/admin/new.html.twig
+++ b/templates/admin/new.html.twig
@@ -13,6 +13,12 @@
 			</div>
 		</div>
 
+		<div class="row align-items-center justify-content-center mt-5 mx-3">
+			<div id="uploadPreview" class="col-12 col-md-4 text-center">
+				<div id="image-holder-new"></div>
+			</div>
+		</div>
+
 
 		{# TEST FORM #}
 		<div class="row justify-content-center">
