--- a/templates/admin/update.html.twig
+++ b/templates/admin/update.html.twig
@@ -14,10 +14,14 @@
 			</div>
 		</div>
 
-		<div class="row align-items-center justify-content-center mx-2">
+		<div class="row align-items-center justify-content-center mt-5 mx-3">
 
 			<div class="col-12 col-md-4 text-center mt-3">
 				<div class="imgProduct p-4"><img class="card-img" style="width: 10vh;" src="/img/uploads/{{ product.img }}" alt="image {{ product.name }}"></div>
+				<div>image actuelle</div>
+			</div>
+			<div id="uploadPreview" class="d-none">
+				<div id="image-holder"></div>
 			</div>
 
 		</div>
