custom.js_ scroll to product

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container accueil">
+	<div class="container accueil" id="scroll">
 		<div class="row mt-4">
 			<div class="col-12 text-center mt-3 title d-md-none">
 				<div class="text-warning">ADMIN</div>
