--- a/templates/admin/new.html.twig
+++ b/templates/admin/new.html.twig
@@ -15,7 +15,7 @@
 
 		<div class="row align-items-center justify-content-center mt-5 mx-3">
 			<div id="uploadPreview" class="col-12 col-md-4 text-center">
-				<div id="image-holder-new"></div>
+				<div id="image-holder"></div>
 			</div>
 		</div>
 
